<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/dafault_text_size"
            android:text="@string/contact_form"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_size"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="0.1"
                android:layout_height="@dimen/icon_size"
                android:src="@drawable/ic_baseline_person_24"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:hint="@string/default_hint_name"
                android:inputType="text"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.45"
                android:hint="@string/default_hint_lastname"
                android:inputType="text"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_size"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_email_24"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:inputType="textWebEmailAddress"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                android:hint="@string/default_email_text"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/section_size"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_phone_24"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:inputType="phone"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                android:hint="@string/default_text_area_code"
                />
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:inputType="phone"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                android:hint="@string/default_text_phone"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/big_section"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="@dimen/icon_size"
                android:layout_weight="0.1"
                android:src="@drawable/ic_baseline_location_on_24"
                android:layout_marginStart="@dimen/min_margin"
                android:layout_marginEnd="@dimen/min_margin"
                android:layout_marginTop="@dimen/min_margin"
                android:layout_marginBottom="@dimen/min_margin"
                />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.9">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/default_hint_address"
                    android:inputType="textPostalAddress"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    android:gravity="top"
                    />
            </LinearLayout>


        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/setting_form_tittle"
            android:gravity="center"
            android:textSize="@dimen/dafault_text_size"
            android:layout_marginStart="@dimen/min_margin"
            android:layout_marginEnd="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginBottom="@dimen/min_margin"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/dafault_text_size"
            android:text="@string/toggle"
            android:textStyle="italic"
            android:layout_marginStart="@dimen/min_margin"
            android:layout_marginEnd="@dimen/min_margin"
            android:layout_marginTop="@dimen/min_margin"
            android:layout_marginBottom="@dimen/min_margin"
            />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/section_size"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.8"
                    android:text="Celular Data"
                    android:textSize="@dimen/dafault_text_size"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dafault_text_size"
                    android:text="@string/single_check_subtittle"
                    android:textStyle="italic"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    >
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/allow_notification"
                        android:layout_marginStart="@dimen/min_margin"
                        android:layout_marginEnd="@dimen/min_margin"
                        android:layout_marginTop="@dimen/min_margin"
                        android:layout_marginBottom="@dimen/min_margin"
                        />
                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/turn_off_notification"
                        android:layout_marginStart="@dimen/min_margin"
                        android:layout_marginEnd="@dimen/min_margin"
                        android:layout_marginTop="@dimen/min_margin"
                        android:layout_marginBottom="@dimen/min_margin"
                        />

                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/dafault_text_size"
                    android:text="@string/multiple_checks"
                    android:textStyle="italic"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/micrphone_access"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_access"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/galery_access"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />
                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/localization_access"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center">

                <Button
                    android:id="@+id/textButton"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    android:gravity="center"/>

                <Button
                    android:gravity="center"
                    android:id="@+id/containedButton"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/accept"
                    android:layout_marginStart="@dimen/min_margin"
                    android:layout_marginEnd="@dimen/min_margin"
                    android:layout_marginTop="@dimen/min_margin"
                    android:layout_marginBottom="@dimen/min_margin"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
